--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bent": "^7.3.12",
+    "node-vibrant": "^3.1.6",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
