--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "fortnite-item-shop",
   "version": "0.0.1",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "node build",
     "serve": "vite preview",
     "lint": "tsc && xo"
   },
@@ -19,14 +20,17 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "esbuild": "^0.9.7",
     "eslint-config-xo-react": "^0.24.0",
     "eslint-plugin-react": "^7.23.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
     "sass": "^1.32.8",
     "typescript": "^4.1.2",
     "vite": "^2.1.5",
-    "xo": "^0.38.2"
+    "xo": "^0.38.2",
+    "xxhash-addon": "^1.4.0"
   },
   "xo": {
     "prettier": true,
