--- a/package.json
+++ b/package.json
@@ -5,36 +5,31 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "node build",
+    "build": "vite build",
     "serve": "vite preview",
     "lint": "tsc && xo"
   },
   "dependencies": {
     "bent": "^7.3.12",
-    "node-vibrant": "^3.2.1-alpha.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "mem": "^9.0.1",
+    "vue": "^3.2.6"
   },
   "devDependencies": {
     "@types/bent": "^7.3.2",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "esbuild": "^0.9.7",
-    "eslint-config-xo-react": "^0.24.0",
-    "eslint-plugin-react": "^7.23.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.2.1",
+    "@vitejs/plugin-vue": "^1.6.1",
+    "@vue/compiler-sfc": "^3.2.6",
+    "esbuild": "^0.12.28",
+    "prettier": "^2.4.0",
     "rimraf": "^3.0.2",
-    "sass": "^1.32.8",
-    "typescript": "^4.1.2",
-    "vite": "^2.1.5",
+    "sass": "^1.40.1",
+    "typescript": "^4.4.3",
+    "vite": "^2.5.7",
+    "vue-tsc": "^0.3.0",
     "xo": "^0.38.2",
     "xxhash-addon": "^1.4.0"
   },
   "xo": {
     "prettier": true,
-    "extends": "xo-react",
     "rules": {
       "unicorn/import-index": [
         "off"
